fixing invisible dice bug

--- a/client/src/styles/components/Dice.scss
+++ b/client/src/styles/components/Dice.scss
@@ -9,13 +9,4 @@
   .dice {
     height: 100%;
   }
-
-  .play-button {
-    margin-left: 8px;
-    cursor: pointer;
-
-    button {
-      font-size: large;
-    }
-  }
 }
